AP-23810: Reverse internal hilite representation for concatenate
AP-23810 (Selection events do not work after the Concatenate node)